# VMUtils

./: .gitignore  .vimspector.json  CMakeLists.txt  CMakeSettings.json  README.md  export.cmake  external.cmake
.clangd/index/: attributes.hpp.87B68263C434B16D.idx  bomb.hpp.B5B3857AD11C8C03.idx  concepts.hpp.B8227EA981F926FF.idx  concurrency.hpp.6E61CE9376E59946.idx  fmt.hpp.22CF4672395CFDFC.idx  ieverything.hpp.D72CBD2080454ABB.idx  json.hpp.322152ECC6EDE529.idx  json_binding.hpp.01BD643B98FEA5DF.idx  log.hpp.EEC3F19EEE8303D1.idx  modules.hpp.205C17742CE14567.idx  nonnull.hpp.C2F77F71089D19D4.idx  option.hpp.85A9F00F14C52AFB.idx  ref.hpp.5872D7BA7E958CD1.idx  test_concurrent.cc.5F80CF4782693B6B.idx  test_fmt.cc.27E56975B9FF8455.idx  test_json_binding.cc.06DF54BE4071738D.idx  test_log.cc.0BFC59C1E70EF924.idx  test_ref.cc.A4313321D29E9E89.idx  test_threadpool.cc.21EAE4940BB2E02F.idx  test_timer.cc.AD032B8A2A226DAC.idx  threadpool.hpp.4BE8F5B221D5178B.idx  timer.hpp.5D0D763E3B1D1C1E.idx  traits.hpp.B37FF6C5D57E5B62.idx  version.hpp.D947377172ECB125.idx  vmnew.hpp.FFFEF67F465ECB3F.idx
include/VMUtils/: attributes.hpp  bomb.hpp  common.h  compile_spec.hpp  concepts.hpp  concurrency.hpp  enum.hpp  fmt.hpp  ieverything.hpp  json_binding.hpp  log.h  log.hpp  modules.hpp  nonnull.hpp  option.hpp  ref.hpp  sigslot.hpp  singleton.hpp  threadpool.hpp  timer.hpp  traits.hpp  utils_config.h  version.hpp  vmnew.hpp  weakref.hpp  with.hpp
include/VMUtils/better_enums/: enum.h
include/VMUtils/nlohmann/: json.hpp
src/: log.cpp
tests/: CMakeLists.txt  test_concurrent.cc  test_fmt.cc  test_json_binding.cc  test_log.cc  test_ref.cc  test_threadpool.cc  test_timer.cc
